*SVN*

* Fix Scaffold Fails with Struct as a Parameter #4363 [joe@mjg2.com]

* Fix soap type registration of multidimensional arrays (#4232)

* Fix that marshaler couldn't handle ActiveRecord models defined in a different namespace (#2392).

* Fix that marshaler couldn't handle structs with members of ActiveRecord type (#1889).

* Fix that marshaler couldn't handle nil values for inner structs (#3576).

* Fix that changes to ActiveWebService::API::Base required restarting of the server (#2390).

* Fix scaffolding for signatures with :date, :time and :base64 types (#3321, #2769, #2078).

* Fix for incorrect casting of TrueClass/FalseClass instances (#2633, #3421).

* Fix for incompatibility problems with SOAP4R 1.5.5 (#2553) [Kent Sibilev]

* Update from LGPL to MIT license as per Minero Aoki's permission. [Marcel Molina Jr.]

* Rename Version constant to VERSION. #2802 [Marcel Molina Jr.]

* Fix that XML-RPC date/time values did not have well-defined behaviour (#2516, #2534). This fix has one caveat, in that we can't support pre-1970 dates from XML-RPC clients.

*0.9.3* (November 7th, 2005)

* Upgraded to Action Pack 1.11.0 and Active Record 1.13.0


*0.9.2* (October 26th, 2005)

* Upgraded to Action Pack 1.10.2 and Active Record 1.12.2


*0.9.1* (October 19th, 2005)

* Upgraded to Action Pack 1.10.1 and Active Record 1.12.1


*0.9.0* (October 16th, 2005)

* Fix invalid XML request generation bug in test_invoke [Ken Barker]

* Add XML-RPC 'system.multicall' support #1941 [jbonnar]

* Fix duplicate XSD entries for custom types shared across delegated/layered services #1729 [Tyler Kovacs]

* Allow multiple invocations in the same test method #1720 [dkhawk]

* Added ActionWebService::API::Base.soap_client and ActionWebService::API::Base.xmlrpc_client helper methods to create the internal clients for an API, useful for testing from ./script/console

* ActionWebService now always returns UTF-8 responses.


*0.8.1* (11 July, 2005)
