@@ -96,10 +96,13 @@ module ActionWebService # :nodoc:
           when :float
             Float(value)
           when :time
+            value = "#{value['2']}/#{value['3']}/#{value['1']} #{value['4']}:#{value['5']}:#{value['6']}" if value.kind_of?(Hash)
             Time.parse(value.to_s)
           when :date
+            value = "#{value['2']}/#{value['3']}/#{value['1']}" if value.kind_of?(Hash)
             Date.parse(value.to_s)
           when :datetime
+            value = "#{value['2']}/#{value['3']}/#{value['1']} #{value['4']}:#{value['5']}:#{value['6']}" if value.kind_of?(Hash)
             DateTime.parse(value.to_s)
           end
         end
